Add get monitor stats by ID to docs
